--- a/index.html
+++ b/index.html
@@ -1,48 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | FAQ accordion</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    :root {
+      --worksans: 'Work Sans', sans-serif;
+
+      --White: hsl(0, 0%, 100%);
+      --Light-pink: hsl(275, 100%, 97%);
+      --Grayish-purple: hsl(292, 16%, 49%);
+      --Dark-purple: hsl(292, 42%, 14%);
+    }
+
+    *{
+      box-sizing: border-box;
+    }
+
+    body{
+      background-color: var(--Light-pink);
+      background-image: url("assets/images/background-pattern-desktop.svg");
+      background-repeat: repeat-x;
+      font-family: var(--worksans);
+    }
+
+    main{
+      display: flex;
+      flex-direction: column;
+      width: 700px;
+      margin: 0 auto;
+      margin-top: 100px;
+      margin-bottom: 50px;
+      background-color: var(--White);
+      border-radius: 20px;
+      padding: 10px 40px;
+
+    }
+
+    header{
+      display: flex;
+      gap: 20px;
+    }
+
+    h1{
+      font-size: 56px;
+      color: var(--Dark-purple);
+      margin-bottom: 0;
+    }
+
+    ul{
+      list-style: none;
+    }
+
+    li{
+      height: 80px;
+      border-top: 1px solid var(--Light-pink);
+      margin: auto;
+    }
+
+    li:first-child{
+      border-top: none;
+    }
+
+    li div{
+      padding-top: 25px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    div{
+      cursor: pointer;
+    }
+
+    h2{
+      display: inline-block;
+      font-size: 20px;
+      margin: 0;
+      color: var(--Dark-purple);
+    }
+
+    h2:hover{
+      color: var(--Grayish-purple);
+    }
+
+    p{
+      font-size: 18px;
+      color: var(--Grayish-purple);
+      line-height: 22px;
+    }
+
+    .hidden{
+      display: none;
+      opacity: 0;
+      visibility: hidden;
+    }
+    
+    @media ( max-width: 720px ) {
+      main{
+        width: 400px;
+      }
+
+      h1{
+        font-size: 40px;
+      }
+
+      h2{
+        font-size: 18px;
+      }
+    }
+
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-
-  FAQs
-
-  What is Frontend Mentor, and how will it help me?
-
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
-
-  Is Frontend Mentor free?
-
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
-
-  Can I use Frontend Mentor projects in my portfolio?
-
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
+<main>
+  <header>
+    <img src="./assets/images/icon-star.svg" alt="" class="star">
+    <h1>FAQs</h1>
+  </header>
   
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
+  <ul>
+    <li>
+      <div>
+        <h2>What is Frontend Mentor, and how will it help me?</h2>
+        <img src="./assets/images/icon-plus.svg" alt="">
+        <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
+      </div>
+      <p class="hidden">Frontend Mentor offers realistic coding challenges to help developers improve their
+        frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
+        all levels and ideal for portfolio building.</p>
+    </li>
+    <li>
+      <div>
+        <h2>Is Frontend Mentor free?</h2>
+        <img src="./assets/images/icon-plus.svg" alt="">
+        <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
+      </div>
+      <p class="hidden">Yes, Frontend Mentor offers both free and premium coding challenges, with the free
+        option providing access to a range of projects suitable for all skill levels.</p>
+    </li>
+    <li>
+      <div>
+        <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+        <img src="./assets/images/icon-plus.svg" alt="">
+        <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
+      </div>
+      <p class="hidden">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+        way to showcase your skills to potential employers!</p>
+    </li>
+    <li>
+      <div>
+        <h2>How can I get help if I'm stuck on a challenge?</h2>
+        <img src="./assets/images/icon-plus.svg" alt="">
+        <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
+      </div>
+      <p class="hidden">The best place to get help is inside Frontend Mentor's Discord community. There's a help
+        channel where you can ask questions and seek support from other community members.</p>
+    </li>
+  </ul>
+</main>
+  
 
   
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
