--- a/index.html
+++ b/index.html
@@ -24,18 +24,19 @@
       --Dark-purple: hsl(292, 42%, 14%);
     }
 
-    *{
+    * {
       box-sizing: border-box;
     }
 
-    body{
+    body {
       background-color: var(--Light-pink);
       background-image: url("assets/images/background-pattern-desktop.svg");
       background-repeat: repeat-x;
       font-family: var(--worksans);
+      min-height: 100vh;
     }
 
-    main{
+    main {
       display: flex;
       flex-direction: column;
       width: 700px;
@@ -48,75 +49,86 @@
 
     }
 
-    header{
+    header {
       display: flex;
       gap: 20px;
     }
 
-    h1{
+    h1 {
       font-size: 56px;
       color: var(--Dark-purple);
       margin-bottom: 0;
     }
 
-    ul{
+    ul {
       list-style: none;
     }
 
-    li{
-      height: 80px;
+    li {
       border-top: 1px solid var(--Light-pink);
       margin: auto;
     }
 
-    li:first-child{
+    li:first-child {
       border-top: none;
     }
 
-    li div{
-      padding-top: 25px;
+    li div {
+      padding: 25px 0;
       display: flex;
       align-items: center;
       justify-content: space-between;
     }
 
-    div{
+    div {
       cursor: pointer;
     }
 
-    h2{
+
+    h2 {
       display: inline-block;
       font-size: 20px;
       margin: 0;
       color: var(--Dark-purple);
     }
 
-    h2:hover{
+    h2:hover {
       color: var(--Grayish-purple);
     }
 
-    p{
+    p {
+      opacity: 1;
+      visibility: visible;
       font-size: 18px;
       color: var(--Grayish-purple);
       line-height: 22px;
+      transition: all 2s, font-size 300ms ease-in-out;
     }
 
-    .hidden{
+    .hidden {
       display: none;
       opacity: 0;
       visibility: hidden;
     }
-    
-    @media ( max-width: 720px ) {
-      main{
+
+    .height-0 {
+      height: 0;
+      line-height: 0;
+      font-size: 0px;
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    @media (max-width: 720px) {
+      main {
         width: 400px;
       }
 
-      h1{
+      h1 {
         font-size: 40px;
       }
 
-      h2{
+      h2 {
         font-size: 18px;
       }
     }
@@ -133,77 +145,91 @@
 </head>
 
 <body>
-<main>
-  <header>
-    <img src="./assets/images/icon-star.svg" alt="" class="star">
-    <h1>FAQs</h1>
-  </header>
-  
-  <ul>
-    <li>
-      <div>
-        <h2>What is Frontend Mentor, and how will it help me?</h2>
-        <img src="./assets/images/icon-plus.svg" alt="">
-        <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
-      </div>
-      <p class="hidden">Frontend Mentor offers realistic coding challenges to help developers improve their
-        frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
-        all levels and ideal for portfolio building.</p>
-    </li>
-    <li>
-      <div>
-        <h2>Is Frontend Mentor free?</h2>
-        <img src="./assets/images/icon-plus.svg" alt="">
-        <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
-      </div>
-      <p class="hidden">Yes, Frontend Mentor offers both free and premium coding challenges, with the free
-        option providing access to a range of projects suitable for all skill levels.</p>
-    </li>
-    <li>
-      <div>
-        <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
-        <img src="./assets/images/icon-plus.svg" alt="">
-        <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
-      </div>
-      <p class="hidden">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-        way to showcase your skills to potential employers!</p>
-    </li>
-    <li>
-      <div>
-        <h2>How can I get help if I'm stuck on a challenge?</h2>
-        <img src="./assets/images/icon-plus.svg" alt="">
-        <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
-      </div>
-      <p class="hidden">The best place to get help is inside Frontend Mentor's Discord community. There's a help
-        channel where you can ask questions and seek support from other community members.</p>
-    </li>
-  </ul>
-</main>
-  
+  <main>
+    <header>
+      <img src="./assets/images/icon-star.svg" alt="" class="star">
+      <h1>FAQs</h1>
+    </header>
 
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
+    <ul>
+      <li>
+        <div>
+          <h2>What is Frontend Mentor, and how will it help me?</h2>
+          <img src="./assets/images/icon-plus.svg" alt="" class="hidden">
+          <img src="./assets/images/icon-minus.svg" alt="" >
+        </div>
+        <p>Frontend Mentor offers realistic coding challenges to help developers improve their
+          frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
+          all levels and ideal for portfolio building.</p>
+      </li>
+      <li>
+        <div>
+          <h2>Is Frontend Mentor free?</h2>
+          <img src="./assets/images/icon-plus.svg" alt="">
+          <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
+        </div>
+        <p class="height-0">Yes, Frontend Mentor offers both free and premium coding challenges, with the free
+          option providing access to a range of projects suitable for all skill levels.</p>
+      </li>
+      <li>
+        <div>
+          <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+          <img src="./assets/images/icon-plus.svg" alt="">
+          <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
+        </div>
+        <p class="height-0">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+          way to showcase your skills to potential employers!</p>
+      </li>
+      <li>
+        <div>
+          <h2>How can I get help if I'm stuck on a challenge?</h2>
+          <img src="./assets/images/icon-plus.svg" alt="">
+          <img src="./assets/images/icon-minus.svg" alt="" class="hidden">
+        </div>
+        <p class="height-0">The best place to get help is inside Frontend Mentor's Discord community. There's a help
+          channel where you can ask questions and seek support from other community members.</p>
+      </li>
+    </ul>
+  </main>
 
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/DandyHype">DanDyHype</a>.
   </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      let options = document.querySelectorAll("li");
+
+      options.forEach(option => {
+        option.addEventListener("click", (event) => {
+
+          // Resetting the list
+          options.forEach(otherOptions => {
+            let otherInfo = otherOptions.querySelector("p");
+            let otherplussign = otherOptions.querySelector("img");
+            let otherminussign = otherOptions.querySelector("img:last-child");
+
+            otherInfo.classList.add("height-0");
+            otherplussign.classList.remove("hidden");
+            otherminussign.classList.add("hidden");
+          })
+
+          let info = option.querySelector("p");
+          let plussign = option.querySelector("img");
+          let minussign = option.querySelector("img:last-child");
+
+          if (minussign.classList.contains("hidden")) {
+            plussign.classList.add("hidden");
+            minussign.classList.remove("hidden");
+          }
+
+          info.classList.remove("height-0");
+        });
+      });
+    });
+  </script>
 </body>
 
 </html>
