--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       margin-bottom: 50px;
       background-color: var(--White);
       border-radius: 20px;
-      padding: 10px 40px;
+      padding: 30px 30px;
 
     }
 
@@ -57,7 +57,7 @@
     h1 {
       font-size: 56px;
       color: var(--Dark-purple);
-      margin-bottom: 0;
+      margin: 0;
     }
 
     ul {
