--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       background-color: var(--White);
       border-radius: 20px;
       padding: 30px 30px;
+      box-shadow: 0px 32px 56px 0px rgba(80, 0, 118, 0.10);
 
     }
 
